# straylight

./: CMakeLists.txt  app.cpp  app.hpp  colors.cpp  colors.hpp  datum.cpp  datum.hpp  main.cpp  ui.cpp  ui.hpp
app/: CMakeLists.txt  qml.qrc  resources.qrc
app/deploy/mac/: Info.plist
app/fonts/: LICENSE
app/gl/: axes.frag  axes.vert  depthquad.frag  depthquad.vert  point_handle.frag  point_handle.vert  point_handle_dotted.frag
app/include/app/bind/: bind_s7.h  bind_s7.hpp
app/include/app/bridge/: bridge.hpp  escaped.hpp  graph.hpp  instance.hpp  io.hpp  items.hpp  library.hpp  sheet.hpp  sheets.hpp  translator.hpp  watcher.hpp
app/include/app/render/: axes.hpp  blitter.hpp  canvas.hpp  drag.hpp  handle.hpp  picker.hpp  point_drag.hpp  point_handle.hpp  renderer.hpp  scene.hpp  shape_drag.hpp  shape_handle.hpp
app/include/app/ui/: material.hpp  syntax.hpp
app/js/: model_util.js
app/qml/: Awesome.qml  CellExpr.qml  Colors.qml  ExpressionEdit.qml  IconButton.qml  ItemName.qml  ItemTitle.qml  ItemsPane.qml  ItemsView.qml  LibraryView.qml  Material.qml  SheetCellBody.qml  SheetCellDelegate.qml  SheetCreator.qml  SheetInstanceDelegate.qml  SheetInstanceIODelegate.qml  SheetInstanceInput.qml  SheetItemDelegate.qml  SheetItemTitle.qml  SheetItemsPane.qml  SheetLibraryDelegate.qml  SheetLibraryPane.qml  SheetStack.qml  SheetTitle.qml  SheetView.qml  Style.qml  TextRect.qml  TextValidator.qml  ValidatedInput.qml  main.qml
app/src/: axes.cpp  blitter.cpp  blitter.hpp  bridge.cpp  bridge.hpp  canvas.cpp  canvas.hpp  main.cpp  material.cpp  material.hpp  name_validator.cpp  name_validator.hpp  renderer.cpp  renderer.hpp  syntax.cpp  syntax.hpp  undo.cpp  undo.hpp
app/src/bind/: bind_s7.cpp  bind_s7.h
app/src/bridge/: bridge.cpp  escaped.cpp  graph.cpp  instance.cpp  io.cpp  items.cpp  library.cpp  sheet.cpp  sheets.cpp  translator.cpp  watcher.cpp
app/src/core/: bridge.cpp  bridge.hpp  undo.cpp  undo.hpp
app/src/render/: axes.cpp  axes.hpp  blitter.cpp  blitter.hpp  canvas.cpp  canvas.hpp  drag.cpp  drag.hpp  handle.cpp  handle.hpp  picker.cpp  picker.hpp  point_drag.cpp  point_drag.hpp  point_handle.cpp  point_handle.hpp  renderer.cpp  renderer.hpp  scene.cpp  shape_drag.cpp  shape_handle.cpp
app/src/ui/: material.cpp  syntax.cpp
graph/: CMakeLists.txt  cell.hpp  dependencies.cpp  dependencies.hpp  instance.cpp  instance.hpp  interpreter.cpp  interpreter.hpp  keys.cpp  keys.hpp  root.cpp  root.hpp  sheet.cpp  sheet.hpp  types.hpp  value.hpp
graph/include/graph/: async.hpp  cell.hpp  command.hpp  dependencies.hpp  env.hpp  index.hpp  instance.hpp  interpreter.hpp  item.hpp  keynamestore.hpp  keys.hpp  library.hpp  ptr.hpp  queue.hpp  response.hpp  root.hpp  serializer.hpp  translator.hpp  tree.hpp  types.hpp  value.hpp
graph/include/graph/types/: cell.hpp  env.hpp  instance.hpp  keys.hpp  serializer.hpp  tag.hpp  value.hpp
graph/src/: async.cpp  command.cpp  dependencies.cpp  interpreter.cpp  item.cpp  keys.cpp  library.cpp  response.cpp  root.cpp  sheet.cpp  translator.cpp  tree.cpp
graph/test/: async.cpp  dependencies.cpp  interpreter.cpp  item.cpp  library.cpp  main.cpp  root.cpp  tree.cpp
graph2/: CMakeLists.txt
graph2/include/graph/: caller.hpp  cell.hpp  dependencies.hpp  env.hpp  graph.hpp  id.hpp  index.hpp  instance.hpp  interpreter.hpp  item.hpp  key.hpp  keynamestore.hpp  keys.hpp  library.hpp  node.hpp  root.hpp  sheet.hpp  symbol.hpp  tree.hpp  value.hpp
graph2/src/: dependencies.cpp  graph.cpp  interpreter.cpp  item.cpp  key.cpp  library.cpp  root.cpp  sheet.cpp  symbol.cpp  tree.cpp
graph2/test/: dependencies.cpp  id.cpp  interpreter.cpp  key.cpp  library.cpp  root.cpp  sheet.cpp  symbol.cpp  tree.cpp
imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_impl_glfw_gl3.cpp  imgui_internal.h  stb_textedit.h
kernel/: CMakeLists.txt
kernel/include/kernel/bind/: bind_s7.h
kernel/include/kernel/eval/: clause.hpp  evaluator.hpp  evaluator_avx.hpp  evaluator_base.hpp  feature.hpp  interval.hpp  result.hpp
kernel/include/kernel/format/: contours.hpp  image.hpp  mesh.hpp
kernel/include/kernel/render/: heightmap.hpp  octree.hpp  quadtree.hpp  region.hpp  subregion.hpp  xtree.hpp  xtree.ipp
kernel/include/kernel/solve/: solver.hpp
kernel/include/kernel/tree/: cache.hpp  cache_.hpp  opcode.hpp  tag.hpp  tree.hpp  tree_.hpp
kernel/src/bind/: bind_s7.cpp
kernel/src/eval/: evaluator.cpp  evaluator_avx.cpp  evaluator_base.cpp  feature.cpp  result.cpp
kernel/src/format/: contours.cpp  image.cpp  mesh.cpp
kernel/src/render/: dc.cpp  dc2d.cpp  heightmap.cpp  octree.cpp  quadtree.cpp  region.cpp  subregion.cpp
kernel/src/solve/: solver.cpp
kernel/src/tree/: cache.cpp  cache_.cpp  opcode.cpp  tree.cpp  tree_.cpp
kernel/test/: avx.cpp  bind_s7.cpp  cache.cpp  contours.cpp  dc.cpp  eval.cpp  feature.cpp  heightmap.cpp  mesh.cpp  octree.cpp  quadtree.cpp  region.cpp  solver.cpp  subregion.cpp  tree.cpp
kernel/test/util/: shapes.cpp  shapes.hpp
test/: CMakeLists.txt
